sphereMesh.js minor bug fix
scene parameter was missing

--- a/sourceFiles/index.html
+++ b/sourceFiles/index.html
@@ -156,8 +156,8 @@ obje.traverse( function ( child ) {
 
     }
 
-    //add spheres to mesh, push to objects[]
-    sphereMesh(cubeMesh, objects); //Custom sphereMesh function
+    //add spheres to mesh, push to objects[], add to scene
+    sphereMesh(cubeMesh, objects, scene); //Custom sphereMesh function
 
 	},
 	// called when loading is in progresses
